# THeBE

./: .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux32.yml  linux64.yml  macos.yml
doc/: README.txt  config_base.yaml  config_travis.yaml  source_readme_github.pptx
include/: CH_Spaghetti_FREQ_3dpes-fingerprints-hamlet-medical-mirflickr-tobacco800-xdocs-classical_center_line_forest_code.inc.h  CH_Spaghetti_FREQ_3dpes-fingerprints-hamlet-medical-mirflickr-tobacco800-xdocs_center_line_forest_code.inc.h  CH_Spaghetti_FREQ_hamlet_center_line_forest_code.inc.h  GH_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_center_line_forest_code.inc.h  GH_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical_center_line_forest_code.inc.h  GH_Spaghetti_FREQ_hamlet_center_line_forest_code.inc.h  GH_Spaghetti_center_line_forest_code.inc.h  ZS_Spaghetti_FREQ_allnoclassical_center_line_forest_code.inc.h  ZS_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical-classical_center_line_forest_code.inc.h  ZS_Spaghetti_FREQ_fingerprints-hamlet-3dpes-xdocs-tobacco800-mirflickr-medical_center_line_forest_code.inc.h  ZS_Spaghetti_FREQ_hamlet_center_line_forest_code.inc.h  ZS_Spaghetti_center_line_forest_code.inc.h  config_data.h  file_manager.h  latex_generator.h  memory_tester.h  performance_evaluator.h  progress_bar.h  register.h  stream_demultiplexer.h  system_info.h  thebe_tests.h  thinning_algorithms.h  thinning_bolelli_2019.h  thinning_chenhsu_1987.h  thinning_chenhsu_1987_drag.inc  thinning_chenhsu_1987_tree.inc  thinning_guohall_1989.h  thinning_guohall_1989_drag.inc  thinning_guohall_1989_tree.inc  thinning_guohall_lut.h  thinning_hscp.h  thinning_iteration.h  thinning_zhangsuen_1984.h  thinning_zhangsuen_1984_drag.inc  thinning_zhangsuen_1984_ptrs.h  thinning_zhangsuen_1984_tree.inc  thinning_zhangsuen_lut.h  utilities.h
src/: config_data.cc  file_manager.cc  latex_generator.cc  main.cc  system_info.cc  thebe_tests.cc  thinning_algorithms.cc  thinning_bolelli_2019.cc  thinning_chenhsu_1987.cc  thinning_chenhsu_1987.cpp  thinning_guohall_1989.cc  thinning_guohall_1989.cpp  thinning_hscp.cc  thinning_zhangsuen_1984.cc  thinning_zhangsuen_1984_ptrs.cc  thinning_zhangsuen_lut.cc  utilities.cc
tools/actions-scripts/: macos-before-install.sh
tools/travis-scripts/: before-install.sh  run-script.sh
